// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cdYSYf"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ebDNaA"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo cubFYD"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo kzglgV"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cdYSYf"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cdYSYf"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cdYSYf"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv iqxjwu"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv iqxjwu"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo cdYSYf"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fduepK gfcqQs"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv iqxjwu"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo iwinia"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo ktFYEx"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo hKdaRy"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo exOnDV"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <div
      className="sc-joKenV jxDhos"
    >
      <input
        className="sc-QmDjo dXduda"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV libhLy"
    >
      <input
        className="sc-QmDjo cdYSYf"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
      <div
        className="sc-cmvVVv gehktR"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
